--- a/css/quiz-detail.css
+++ b/css/quiz-detail.css
@@ -4,6 +4,7 @@ main {
     margin: 20px auto;
     padding: 20px;
     background-color: #fff;
+    color: #000;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
@@ -71,4 +72,5 @@ main {
 
 #author-info span {
     font-weight: bold;
+
 }
